--- a/style.css
+++ b/style.css
@@ -1,5 +1,63 @@
+h1 {
+  color: inherit; 
+  text-align: center;
+}
+nav {
+  text-align: center;
+}
+
+nav a {
+  display: inline-block;
+}
+
 body {
   width: 100%;
   height: 100%;
   margin: 0;
+}
+
+
+#main-header {
+  text-align: center;
+}
+
+
+img {
+  display: block;
+  margin: 0 auto;
+}
+
+nav a {
+  display: inline-block;
+  padding: 10px;
+  background-color: grey;
+  text-align: center;
+  text-decoration: none; 
+  color: white; 
+}
+
+#featured-property figcaption {
+  font-size: 14px;
+  text-align: center;
+}
+
+
+#featured-property p {
+  width: 800px;
+  margin: 20px auto;
+  text-align: center;
+}
+
+
+#details {
+  display: flex; 
+  justify-content: space-between; 
+  background-color: red; 
+  padding: 10px 0;
+}
+
+#details div {
+  width: 25%;
+  text-align: center;
+  padding: 10px;
 }
