--- a/style.css
+++ b/style.css
@@ -1,63 +1,53 @@
-h1 {
-  color: inherit; 
+/* Center the header */
+header {
   text-align: center;
 }
+
+/* Center the image */
+#featured-property figure {
+  text-align: center;
+}
+
+#featured-property img {
+  display: block;
+  margin: 0 auto;
+}
+
+/* Style the navigation links */
 nav {
   text-align: center;
 }
 
 nav a {
-  display: inline-block;
-}
-
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
-
-
-#main-header {
-  text-align: center;
-}
-
-
-img {
-  display: block;
-  margin: 0 auto;
-}
-
-nav a {
-  display: inline-block;
   padding: 10px;
-  background-color: grey;
-  text-align: center;
-  text-decoration: none; 
-  color: white; 
+  background-color: gray; /* You can change this */
+  color: white;
+  text-decoration: none;
+  display: inline-block;
 }
 
-#featured-property figcaption {
+/* Center and resize the image caption */
+figcaption {
   font-size: 14px;
   text-align: center;
 }
 
-
+/* Center text block and adjust width */
 #featured-property p {
   width: 800px;
-  margin: 20px auto;
   text-align: center;
+  margin: 20px auto;
 }
 
-
+/* Make the #details section horizontal */
 #details {
-  display: flex; 
-  justify-content: space-between; 
-  background-color: red; 
-  padding: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
 }
 
 #details div {
   width: 25%;
-  text-align: center;
+  background-color: lightgray; /* Change if needed */
   padding: 10px;
 }
